--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
         "php": ">=5.5.9",
         "doctrine/orm": "^2.5",
         "pagerfanta/pagerfanta": "^1.0",
-        "symfony/symfony": "3.4.*|^4.0",
+        "symfony/symfony": "~2.8|~3.0|^4.0",
         "league/fractal": "^0.17",
-        "symfony/security": "3.4.*|^4.0"
+        "symfony/security": "~2.8|~3.0|^4.0",
+        "limenius/liform": "^0.12"
     }
 }
