Add translation component

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/framework-bundle": "~2.8|~3.0|^4.0",
         "league/fractal": "^0.17",
         "symfony/security": "~2.8|~3.0|^4.0",
-        "limenius/liform": "^0.12"
+        "limenius/liform": "^0.12",
+        "symfony/translation": "~2.8|~3.0|^4.0"
     }
 }
