--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,9 @@
         "symfony/framework-bundle": "~2.8|~3.0|^4.0",
         "league/fractal": "^0.17",
         "limenius/liform": "^0.12"
+    },
+    "suggests": {
+        "symfony/flex": "For an easier bundle instalation",
+        "symfony/maker-bundle": "For fast resource creation"
     }
 }
