--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,10 @@
         "symfony/framework-bundle": "~2.8|~3.0|^4.0",
         "league/fractal": "^0.17",
         "limenius/liform": "^0.12",
-	"symfony/translation": "^4.0",
-        "symfony/validator": "^4.0"
+        "symfony/form": "~2.8|~3.0|^4.0",
+        "symfony/translation": "~2.3|~3.0|^4.0",
+        "symfony/serializer": "~2.8|~3.0|^4.0",
+        "symfony/validator": "~2.8|~3.0|^4.0"
     },
     "suggests": {
         "symfony/flex": "For an easier bundle instalation",
