--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": "^7.0",
         "pagerfanta/pagerfanta": "^1.0",
         "symfony/security-bundle": "~2.8|~3.0|^4.0",
         "symfony/orm-pack": "^1.0",
@@ -26,7 +26,8 @@
         "symfony/validator": "~2.8|~3.0|^4.0",
         "symfony/stopwatch": "^3.3|^4.0",
         "symfony/twig-bundle": "^3.3|^4.0",
-        "symfony/web-profiler-bundle": "^3.3|^4.0"
+        "symfony/web-profiler-bundle": "^3.3|^4.0",
+        "fzaninotto/faker": "^1.7"
     },
     "suggests": {
         "symfony/flex": "For an easier bundle instalation",
